unpackaged/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Education__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Education__c</fullName>
    <description>A person&#39;s history of education.</description>
    <inlineHelpText>A person&#39;s history of education.</inlineHelpText>
    <label>Education</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>