unpackaged/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Employment_History__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Employment_History__c</fullName>
    <description>A person&#39;s history of employment.</description>
    <inlineHelpText>A person&#39;s history of employment.</inlineHelpText>
    <label>Employment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>