unpackaged/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__IT_Department_Budget__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__IT_Department_Budget__c</fullName>
    <description>Approximate budget of the company&#39;s IT department.</description>
    <inlineHelpText>Approximate budget of the company&#39;s IT department.</inlineHelpText>
    <label>IT Department Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>