unpackaged/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Marketing_Department_Budget__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Marketing_Department_Budget__c</fullName>
    <description>Approximate budget of the company&#39;s marketing department.</description>
    <inlineHelpText>Approximate budget of the company&#39;s marketing department.</inlineHelpText>
    <label>Marketing Department Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>