unpackaged/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Total_Funding__c</fullName>
    <description>Sum of all rounds of funding, found in the Funding History of the company&#39;s profile.</description>
    <inlineHelpText>Sum of all rounds of funding, found in the Funding History of the company&#39;s profile.</inlineHelpText>
    <label>Total Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>